# su-doku

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: docs.yml  lint.yml  release.yml
_static/: documentation_options.js
docs/source/: conf.py  index.rst
src/su_doku/: sudoku.py  typing.py
